# icfp_contests

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  endo.dna.bz2  endo.rna.bz2  endo.zip.md5sum  task.md
2006-boundvariable/: Makefile
2006-boundvariable/doc/: task.md
2006-boundvariable/src/: um.cpp  utils.cpp  utils.hpp
2007-save_endo/: .gitignore  CMakeLists.txt  Makefile  README.org
2007-save_endo/data/: daytime.rna  manual-guide.rna  manual-intro.rna  self-check.rna
2007-save_endo/doc/: notes.org
2007-save_endo/include/: array.hpp
2007-save_endo/src/: bitmap.hpp  build.cpp  build.hpp  dna.cpp  dna.hpp  execute.cpp  execute.hpp  risk.cpp  rna.cpp  rna.hpp  rope.hpp
2007-save_endo/test/: 02.expected  02.input  03.input  t01-asnat.cpp  t04-protect.cpp  t05-consts.cpp  t06-templates.cpp  t11-pixels.cpp  t12-moves.cpp  test-asnat.cpp  test-consts.cpp  test-full-iteration.cpp  test-pattern.cpp  test-protect.cpp  test-quote.cpp  test-rope.cpp  test-templates.cpp  test_square.rna
2009-hohmann/data/: md5sum.txt
2017-lambda_punter/: .gitmodules
2017-lambda_punter/maps/: gothenburg-sparse.json  lambda.json  oxford-sparse.json  sample.json  tube.json
2017-lambda_punter/src/: punter.cpp
data/: md5sum.txt
include/: array.hpp  um.hpp
maps/: Sierpinski-triangle.json  boston-sparse.json  circle.json  edinburgh-sparse.json  nara-sparse.json  randomMedium.json  randomSparse.json
src/: build.cpp  disum.cpp  dna.cpp  dna.hpp  execute.cpp  execute_functions.cpp  execute_functions.hpp  rna.cpp  rna.hpp  um.cpp  utils.cpp
test/: 01.expected  01.input  t01-asnat.cpp  t02-pattern.cpp  t03-quote.cpp  t04-protect.cpp  t05-consts.cpp  t06-templates.cpp  t11-pixels.cpp  t12-moves.cpp  test_fill_empty.rna  test_fill_flood.rna  test_fill_square.rna
